[package]
name = "background-jobs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = "0.23.39"
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.4.4"
webpki-roots = "1.0.7"
